--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .f1{
  width: 40%;
 padding: 50px !important;
-background: #000;
+background: #1C2333;
+box-shadow: 0 4px 8px 0 rgba(11, 11, 11, 0.515), 0 6px 20px 0 rgb(0, 0, 0) !important ;
 }
 .fa{
     padding-top: 10px;
